external-crates/move/crates/move-compiler/tests/move_2024/naming/positional_struct_lhs_unpack.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E03009]: unbound variable
  ┌─ tests/move_2024/naming/positional_struct_lhs_unpack.move:6:13
  │
6 │         Foo(t, y) = x;
  │             ^ Invalid assignment. Unbound variable 't'

error[E04016]: too few arguments
  ┌─ tests/move_2024/naming/positional_struct_lhs_unpack.move:7:9
  │
7 │         Foo() = x;
  │         ^^^^^ Missing assignment for field '0' in '0x42::M::Foo'

error[E04016]: too few arguments
  ┌─ tests/move_2024/naming/positional_struct_lhs_unpack.move:7:9
  │
7 │         Foo() = x;
  │         ^^^^^ Missing assignment for field '1' in '0x42::M::Foo'

error[E04007]: incompatible types
  ┌─ tests/move_2024/naming/positional_struct_lhs_unpack.move:8:9
  │
5 │     fun f(x: Foo) {
  │              --- Expected: '0x42::M::Foo'
  ·
8 │         Bar() = x;
  │         ^^^^^
  │         │
  │         Invalid deconstruction assignment
  │         Given: '0x42::M::Bar'

error[E03010]: unbound field
  ┌─ tests/move_2024/naming/positional_struct_lhs_unpack.move:9:9
  │
9 │         Bar(_, _) = x;
  │         ^^^^^^^^^ Unbound field '0' in '0x42::M::Bar'

error[E03010]: unbound field
  ┌─ tests/move_2024/naming/positional_struct_lhs_unpack.move:9:9
  │
9 │         Bar(_, _) = x;
  │         ^^^^^^^^^ Unbound field '1' in '0x42::M::Bar'

error[E04007]: incompatible types
  ┌─ tests/move_2024/naming/positional_struct_lhs_unpack.move:9:9
  │
5 │     fun f(x: Foo) {
  │              --- Expected: '0x42::M::Foo'
  ·
9 │         Bar(_, _) = x;
  │         ^^^^^^^^^
  │         │
  │         Invalid deconstruction assignment
  │         Given: '0x42::M::Bar'

error[E04016]: too few arguments
   ┌─ tests/move_2024/naming/positional_struct_lhs_unpack.move:13:13
   │
13 │         let Foo() = x;
   │             ^^^^^ Missing binding for field '0' in '0x42::M::Foo'

error[E04016]: too few arguments
   ┌─ tests/move_2024/naming/positional_struct_lhs_unpack.move:13:13
   │
13 │         let Foo() = x;
   │             ^^^^^ Missing binding for field '1' in '0x42::M::Foo'

error[E04007]: incompatible types
   ┌─ tests/move_2024/naming/positional_struct_lhs_unpack.move:14:13
   │
12 │     fun g(x: Foo) {
   │              --- Expected: '0x42::M::Foo'
13 │         let Foo() = x;
14 │         let Bar() = x;
   │             ^^^^^
   │             │
   │             Invalid deconstruction binding
   │             Given: '0x42::M::Bar'

error[E03010]: unbound field
   ┌─ tests/move_2024/naming/positional_struct_lhs_unpack.move:15:13
   │
15 │         let Bar(c, d) = x;
   │             ^^^^^^^^^ Unbound field '0' in '0x42::M::Bar'

error[E03010]: unbound field
   ┌─ tests/move_2024/naming/positional_struct_lhs_unpack.move:15:13
   │
15 │         let Bar(c, d) = x;
   │             ^^^^^^^^^ Unbound field '1' in '0x42::M::Bar'

error[E04007]: incompatible types
   ┌─ tests/move_2024/naming/positional_struct_lhs_unpack.move:15:13
   │
12 │     fun g(x: Foo) {
   │              --- Expected: '0x42::M::Foo'
   ·
15 │         let Bar(c, d) = x;
   │             ^^^^^^^^^
   │             │
   │             Invalid deconstruction binding
   │             Given: '0x42::M::Bar'

warning[W09002]: unused variable
   ┌─ tests/move_2024/naming/positional_struct_lhs_unpack.move:15:17
   │
15 │         let Bar(c, d) = x;
   │                 ^ Unused local variable 'c'. Consider removing or prefixing with an underscore: '_c'
   │
   = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

warning[W09002]: unused variable
   ┌─ tests/move_2024/naming/positional_struct_lhs_unpack.move:15:20
   │
15 │         let Bar(c, d) = x;
   │                    ^ Unused local variable 'd'. Consider removing or prefixing with an underscore: '_d'
   │
   = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E04007]: incompatible types
   ┌─ tests/move_2024/naming/positional_struct_lhs_unpack.move:19:9
   │
18 │     fun h(x: Bar) {
   │              --- Expected: '0x42::M::Bar'
19 │         Foo(_, _) = x;
   │         ^^^^^^^^^
   │         │
   │         Invalid deconstruction assignment
   │         Given: '0x42::M::Foo'

error[E03009]: unbound variable
   ┌─ tests/move_2024/naming/positional_struct_lhs_unpack.move:20:13
   │
20 │         Foo(t, y) = x;
   │             ^ Invalid assignment. Unbound variable 't'

error[E04007]: incompatible types
   ┌─ tests/move_2024/naming/positional_struct_lhs_unpack.move:21:9
   │
18 │     fun h(x: Bar) {
   │              --- Expected: '0x42::M::Bar'
   ·
21 │         Foo() = x;
   │         ^^^^^
   │         │
   │         Invalid deconstruction assignment
   │         Given: '0x42::M::Foo'

error[E04016]: too few arguments
   ┌─ tests/move_2024/naming/positional_struct_lhs_unpack.move:21:9
   │
21 │         Foo() = x;
   │         ^^^^^ Missing assignment for field '0' in '0x42::M::Foo'

error[E04016]: too few arguments
   ┌─ tests/move_2024/naming/positional_struct_lhs_unpack.move:21:9
   │
21 │         Foo() = x;
   │         ^^^^^ Missing assignment for field '1' in '0x42::M::Foo'

error[E03010]: unbound field
   ┌─ tests/move_2024/naming/positional_struct_lhs_unpack.move:22:9
   │
22 │         Bar(_, _) = x;
   │         ^^^^^^^^^ Unbound field '0' in '0x42::M::Bar'

error[E03010]: unbound field
   ┌─ tests/move_2024/naming/positional_struct_lhs_unpack.move:22:9
   │
22 │         Bar(_, _) = x;
   │         ^^^^^^^^^ Unbound field '1' in '0x42::M::Bar'

error[E04007]: incompatible types
   ┌─ tests/move_2024/naming/positional_struct_lhs_unpack.move:26:13
   │
25 │     fun z(x: Bar) {
   │              --- Expected: '0x42::M::Bar'
26 │         let Foo(t, y) = x;
   │             ^^^^^^^^^
   │             │
   │             Invalid deconstruction binding
   │             Given: '0x42::M::Foo'

warning[W09002]: unused variable
   ┌─ tests/move_2024/naming/positional_struct_lhs_unpack.move:26:17
   │
26 │         let Foo(t, y) = x;
   │                 ^ Unused local variable 't'. Consider removing or prefixing with an underscore: '_t'
   │
   = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

warning[W09002]: unused variable
   ┌─ tests/move_2024/naming/positional_struct_lhs_unpack.move:26:20
   │
26 │         let Foo(t, y) = x;
   │                    ^ Unused local variable 'y'. Consider removing or prefixing with an underscore: '_y'
   │
   = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E04007]: incompatible types
   ┌─ tests/move_2024/naming/positional_struct_lhs_unpack.move:27:13
   │
25 │     fun z(x: Bar) {
   │              --- Expected: '0x42::M::Bar'
26 │         let Foo(t, y) = x;
27 │         let Foo() = x;
   │             ^^^^^
   │             │
   │             Invalid deconstruction binding
   │             Given: '0x42::M::Foo'

error[E04016]: too few arguments
   ┌─ tests/move_2024/naming/positional_struct_lhs_unpack.move:27:13
   │
27 │         let Foo() = x;
   │             ^^^^^ Missing binding for field '0' in '0x42::M::Foo'

error[E04016]: too few arguments
   ┌─ tests/move_2024/naming/positional_struct_lhs_unpack.move:27:13
   │
27 │         let Foo() = x;
   │             ^^^^^ Missing binding for field '1' in '0x42::M::Foo'

error[E03010]: unbound field
   ┌─ tests/move_2024/naming/positional_struct_lhs_unpack.move:28:13
   │
28 │         let Bar(_, _) = x;
   │             ^^^^^^^^^ Unbound field '0' in '0x42::M::Bar'

error[E03010]: unbound field
   ┌─ tests/move_2024/naming/positional_struct_lhs_unpack.move:28:13
   │
28 │         let Bar(_, _) = x;
   │             ^^^^^^^^^ Unbound field '1' in '0x42::M::Bar'
